nodejs/.nodeshift/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: nodejs-configmap
spec:
  template:
    spec:
      containers:
        - readinessProbe:
            httpGet:
              path: /api/health/readiness
              port: 8080
              scheme: HTTP
          livenessProbe:
            httpGet:
              path: /api/health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
